--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,3 +10,8 @@ rules:
   react/jsx-filename-extension: 0
   react/react-in-jsx-scope: 0
   react/jsx-one-expression-per-line: 0
+  import/no-mutable-exports: 0
+  no-param-reassign: [2, { "props": false }]
+  no-plusplus: 0
+  no-underscore-dangle: off
+  class-methods-use-this: 0
