--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,3 +15,6 @@ rules:
   no-plusplus: 0
   no-underscore-dangle: off
   class-methods-use-this: 0
+  no-unused-vars: 0
+  operator-linebreak: 0
+  no-restricted-syntax: 0
