--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3"
   },
   "scripts": {
