--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
     "socket.io-client": "^4.4.1",
